# speaker-diarization-pipeline

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sd_api.ipynb
.github/workflows/: ci.yml
diarization/: __init__.py  clustering.py  embeddings.py  pipeline.py  segmenter.py  types.py  vad.py
tests/: conftest.py  test_clustering.py  test_embeddings.py  test_pipeline.py  test_segmenter.py  test_types.py  test_vad.py
